--- a/paper.bib
+++ b/paper.bib
@@ -2,12 +2,51 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Peng Oh at 2016-05-06 00:12:59 -0700 
+%% Created for Peng Oh at 2016-05-26 13:09:48 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{brunetti16_review,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2016PPCF...58a4011B},
+	Archiveprefix = {arXiv},
+	Author = {{Brunetti}, G.},
+	Date-Added = {2016-05-26 15:46:08 +0000},
+	Date-Modified = {2016-05-26 15:46:14 +0000},
+	Doi = {10.1088/0741-3335/58/1/014011},
+	Eid = {014011},
+	Eprint = {1509.03299},
+	Journal = {Plasma Physics and Controlled Fusion},
+	Month = jan,
+	Number = 1,
+	Pages = {014011},
+	Primaryclass = {astro-ph.HE},
+	Title = {{The challenge of turbulent acceleration of relativistic particles in the intra-cluster medium}},
+	Volume = 58,
+	Year = 2016,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1088/0741-3335/58/1/014011}}
+
+@article{brunetti16,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2016MNRAS.458.2584B},
+	Archiveprefix = {arXiv},
+	Author = {{Brunetti}, G. and {Lazarian}, A.},
+	Date-Added = {2016-05-26 15:42:32 +0000},
+	Date-Modified = {2016-05-26 15:42:43 +0000},
+	Doi = {10.1093/mnras/stw496},
+	Eprint = {1603.00458},
+	Journal = {\mnras},
+	Keywords = {acceleration of particles, magnetic reconnection, radiation mechanisms: non-thermal, turbulence, galaxies: clusters: general},
+	Month = may,
+	Pages = {2584-2595},
+	Primaryclass = {astro-ph.HE},
+	Title = {{Stochastic reacceleration of relativistic electrons by turbulent reconnection: a mechanism for cluster-scale radio emission?}},
+	Volume = 458,
+	Year = 2016,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1093/mnras/stw496}}
 
 @article{stawarz08,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
