fixing a few typos

--- a/paper.tex
+++ b/paper.tex
@@ -385,7 +385,7 @@ sustained efficient reacceleration with time.
 
 All of the physics of turbulent reacceleration is effectively encapsulated in the diffusion coefficient \citep{brunetti07}, which can be rewritten as \citep{miniati15}:
 \begin{equation}
-D_{\rm pp}(p) = \frac{ p^{2} \pi I_{\theta}(c_{s}/c)}{8 c} \langle k \rangle_{\mathcal{W}} \langle (\delta v_{\rm c})^{2} \rangle
+D_{\rm pp}(p) = \frac{ p^{2} \pi I_{\theta}(c_{s}/c)}{8 c} \langle k \rangle_{\mathcal{W}} \langle (\delta \varv_{\rm c})^{2} \rangle
 \label{eqn:diffusion}
 \end{equation}
 where $I_{\theta}$ averages interaction rates over the CR pitch angle $\theta$; $I_{\theta} \approx 5$ for ICM conditions, and
@@ -403,7 +403,7 @@ which defines the normalization $\langle (\delta \varv_{\rm c})^{2} \rangle$ (th
 D_{\rm pp} \sim p \dot{p} \sim p^{2} \langle k c \rangle_{\mathcal{W}} \left( \frac{\delta \varv_{\rm c}}{c} \right)^{2}. 
 \end{equation}
 
-Equations \ref{eqn:diffusion} and \ref{eqn:Wk} make the important aspects of turbulence clear: the energy in compressive modes $\langle (\delta v_{\rm c})^{2} \rangle$, the inner and outer scale ($k_{\rm cut}$ and $k_{\rm L}$), and the slope of the energy spectrum $s$. All of these can vary spatially and temporally. 
+Equations \ref{eqn:diffusion} and \ref{eqn:Wk} make the important aspects of turbulence clear: the energy in compressive modes $\langle (\delta \varv_{\rm c})^{2} \rangle$, the inner and outer scale ($k_{\rm cut}$ and $k_{\rm L}$), and the slope of the energy spectrum $s$. All of these can vary spatially and temporally. 
 
 We adopt a Kraichnan spectrum ($s=3/2$) for the fast modes, as seen in simulations \citep{cho03}. This can also be written as: 
 \begin{equation}
@@ -411,9 +411,9 @@ We adopt a Kraichnan spectrum ($s=3/2$) for the fast modes, as seen in simulatio
   \mathcal{W}(k) =
 \sqrt{2/7\,I_0\,\rho\,\langle \Vph \rangle}\,k^{-3/2},
 \end{equation}
-where $I{\rm 0}$ is the volumetric injection rate of turbulence (which is assumed to be constant), $v_{\rm ph}\approx c_{\rm s}$ is the phase speed of waves. It is important to realize that this only applies at small scales, which turbulence is MHD. At large scales, turbulent motions are subsonic (${\mathcal M}_{\rm s} \sim 0.2-0.5$) but super-Alfv{\'e}nic (${\mathcal M}_{\rm A} \sim 5$). Thus, except in the case where motions are transonic and weak shocks become important, motions are fundamentally hydrodynamic and turbulence follows a Kolmogorov ($s=5/3$) spectrum. However, while the turbulent energy density $U_{\rm t} \propto l^{2/3}$ decreases at small scales, the magnetic energy density is scale-independent. Thus, at some scale $l_{\rm A} \sim l_{\rm o} {\mathcal M}_{\rm A}^{-3}$, where $U_{\rm turb} \sim U_{B}$, the magnetic field becomes dynamically important, and turbulence transitions to the MHD regime. The cutoff scale in equation \ref{eqn:Wk} can be computed by setting the turbulent cascade rate for fast modes to the transit time damping rate on thermal electrons. This yields \citep{brunetti07,miniati15}:
+where $I_{\rm 0}$ is the volumetric injection rate of turbulence (which is assumed to be constant), $\varv_{\rm ph}\approx c_{\rm s}$ is the phase speed of waves. It is important to realize that this only applies at small scales, which turbulence is MHD. At large scales, turbulent motions are subsonic (${\mathcal M}_{\rm s} \sim 0.2-0.5$) but super-Alfv{\'e}nic (${\mathcal M}_{\rm A} \sim 5$). Thus, except in the case where motions are transonic and weak shocks become important, motions are fundamentally hydrodynamic and turbulence follows a Kolmogorov ($s=5/3$) spectrum. However, while the turbulent energy density $U_{\rm t} \propto l^{2/3}$ decreases at small scales, the magnetic energy density is scale-independent. Thus, at some scale $l_{\rm A} \sim l_0 {\mathcal M}_{\rm A}^{-3}$, where $U_{\rm turb} \sim U_{B}$, the magnetic field becomes dynamically important, and turbulence transitions to the MHD regime. The cutoff scale in equation \ref{eqn:Wk} can be computed by setting the turbulent cascade rate for fast modes to the transit time damping rate on thermal electrons. This yields \citep{brunetti07,miniati15}:
 \begin{equation}
-k_{\rm c} \approx A k_{\rm outer} \frac{\langle v_{\rm outer}^{2}\rangle^{2}}{c_{\rm s}^{4}}
+k_{\rm c} \approx A k_{\rm outer} \frac{\langle \varv_{\rm outer}^{2}\rangle^{2}}{c_{\rm s}^{4}}
 \label{eqn:k_c} 
 \end{equation}
 where $A \approx 11 000$. This gives $2\upi/k_\rmn{cut}\sim 0.1-1$~kpc in the ICM. This constitutes an
@@ -445,7 +445,7 @@ The important effects are best summarized in terms of the acceleration time:
 \end{equation}
 which is momentum independent. This should be compared against the lifetime of turbulence, $\tau_{\rm cl}$, and the cooling time $\tau_{\rm cool}$. In Table~\ref{tab:timescales}, we show both the thermal quantities and the
 timescales for CR cooling and (re)acceleration for three different
-spatial regions of the RH. The densities \citep{1992A&A...259L..31B} and temperatures \citep{2009ApJ...696.1886B,2001A&A...365L..67A} are derived from X-ray observations. To calculate synchrotron cooling times, we use B-fields derived from Faraday rotation measurements \citep{bonafede10}. To calculate the acceleration time, we need to assume an outer scale. We assume an injection scale $k_{\rm L}=2\pi/\lambda_{\rm L}$, where $\lambda_{\rm L} = 100$ kpc, which were assumptions adopted in previous work \citep{2006MNRAS.366.1437S,brunetti07, brunetti11}. This lengthscale corresponds to an eddy turnover time on the outer scale of $v_{L} k_{\rm L}^{-1} \sim 1.2$Gyr if $v_{\rm L} \sim 500 {\rm km \, s^{-1}}$, as is characteristic of a merger. Note that hydrodynamical simulations of clusters have sometimes found larger $\lambda_{\rm L}$, in some cases comparable to the size of the cluster \citep{vazza11,miniati15}. This choice is degenerate with $X_{\rm tu}$; in \S\ref{sect:self-limiting} we argue that $k_{\rm A}$ is a more appropriate choice, but also find that when the decay time is appropriately scaled, we are relatively insensitive to the choice of $k_{\rm L}$. We present $\tau_{\rm D}$ for 3 different models, which we discuss in the next section. The reacceleration timescale
+spatial regions of the RH. The densities \citep{1992A&A...259L..31B} and temperatures \citep{2009ApJ...696.1886B,2001A&A...365L..67A} are derived from X-ray observations. To calculate synchrotron cooling times, we use B-fields derived from Faraday rotation measurements \citep{bonafede10}. To calculate the acceleration time, we need to assume an outer scale. We assume an injection scale $k_{\rm L}=2\pi/\lambda_{\rm L}$, where $\lambda_{\rm L} = 100$ kpc, which were assumptions adopted in previous work \citep{2006MNRAS.366.1437S,brunetti07, brunetti11}. This lengthscale corresponds to an eddy turnover time on the outer scale of $\varv_{L} k_{\rm L}^{-1} \sim 1.2$Gyr if $\varv_{\rm L} \sim 500 {\rm km \, s^{-1}}$, as is characteristic of a merger. Note that hydrodynamical simulations of clusters have sometimes found larger $\lambda_{\rm L}$, in some cases comparable to the size of the cluster \citep{vazza11,miniati15}. This choice is degenerate with $X_{\rm tu}$; in \S\ref{sect:self-limiting} we argue that $k_{\rm A}$ is a more appropriate choice, but also find that when the decay time is appropriately scaled, we are relatively insensitive to the choice of $k_{\rm L}$. We present $\tau_{\rm D}$ for 3 different models, which we discuss in the next section. The reacceleration timescale
 $\tau_{\rm D}$ is similar between our three models, where the
 difference comes from turbulent profile parameterized with
 $\alpha_\rmn{tu}$. This implies that even small differences in the
@@ -1066,7 +1066,7 @@ While the requirement of a threshold level of turbulence may explain why radio b
 
 There are 3 important timescales in this problem: the acceleration time $\tau_{\rm D}$, the duration that turbulence is active and acceleration takes place, $\tau_{\rm cl}$, and the cooling time $\tau_{\rm cool}(p)$. Only $\tau_{\rm cool}(p)$ is momentum dependent (and is different for ions and electrons). Thus, the outcome of acceleration depends essentially on two dimensionless numbers, $\tau_{\rm cl}/\tau_{\rm D}$, and $\tau_{\rm cool}/\tau_{\rm D}$. 
 
-We have seen that the radio luminosity depends very sensitively on $\tau_{\rm cl}/\tau_{\rm D}$, through the very sensitive dependence on $X_{\rm tu}$ (Fig \ref{fig:param_comp}; note from equation \ref{eq:Dpp_scaling} that $\tau_{\rm D} \propto X_{\rm tu}^{-2}$). Since this raises questions of fine-tuning in $X_{\rm tu}$ to explain the observations, it is worth understanding in more detail. Let us ignore cooling. This is a good approximation for the CR protons, for instance, since hadronic cooling times are long\footnote{In principle, CRp can still lose energy via wave heating, at a rate $v_{\rm A} \cdot \nabla P_{c}$, but we assume CR streaming is suppressed during mergers, when they are spatially confined by scattering.} In this case, $\dot{p}= p/\tau_{\rm D}$, and after a time $\tau_{\rm cl}$, we have $p \rightarrow p \, {\rm exp}(\tau_{\rm cl}/\tau_{\rm D})$ (where we have used the fact that $\tau{\rm D}$ is momentum independent). For an initial power law distribution function $f(p) = C p^{-\alpha}$, this momentum increase can be rewritten as a change of normalization, $f(p) = \tilde{C} p^{-\alpha}$, where $\tilde{C} = {\rm exp}( \alpha \tau_{\rm cl}/\tau_{\rm D})$. A slightly more careful derivation by direct solution of the Fokker-Planck equation yields: 
+We have seen that the radio luminosity depends very sensitively on $\tau_{\rm cl}/\tau_{\rm D}$, through the very sensitive dependence on $X_{\rm tu}$ (Fig \ref{fig:param_comp}; note from equation \ref{eq:Dpp_scaling} that $\tau_{\rm D} \propto X_{\rm tu}^{-2}$). Since this raises questions of fine-tuning in $X_{\rm tu}$ to explain the observations, it is worth understanding in more detail. Let us ignore cooling. This is a good approximation for the CR protons, for instance, since hadronic cooling times are long\footnote{In principle, CRp can still lose energy via wave heating, at a rate $\varv_{\rm A} \cdot \nabla P_{c}$, but we assume CR streaming is suppressed during mergers, when they are spatially confined by scattering.} In this case, $\dot{p}= p/\tau_{\rm D}$, and after a time $\tau_{\rm cl}$, we have $p \rightarrow p \, {\rm exp}(\tau_{\rm cl}/\tau_{\rm D})$ (where we have used the fact that $\tau{\rm D}$ is momentum independent). For an initial power law distribution function $f(p) = C p^{-\alpha}$, this momentum increase can be rewritten as a change of normalization, $f(p) = \tilde{C} p^{-\alpha}$, where $\tilde{C} = {\rm exp}( \alpha \tau_{\rm cl}/\tau_{\rm D})$. A slightly more careful derivation by direct solution of the Fokker-Planck equation yields: 
 \begin{equation}
   \dot{f} = {{\partial }\over{\partial p}}
   p^2 D_{\rm pp} {{\partial }\over{\partial p}} \frac{f}{p^2}\,,
@@ -1085,39 +1085,39 @@ An obvious candidate for $\tau_{\rm decay}$ is:
 \begin{equation}
 \tau_{\rm edd} = \frac{L}{v_{\rm c}}
 \end{equation}
-i.e., the eddy turnover time at the outer scale. This is subject to uncertainties about the location of the outer scale $L$; estimates in the literature range from $L \sim 0.1-1$ Mpc. It is also worth remembering that MHD turbulence only applies below $l < l_{\rm A}$, where $l_{\rm A}$ is the Alfv{\'e}n scale where $v \sim v_{\rm A}$. Invoking fast modes, Kraichnan scalings, etc, is only valid below these scales. For $l > l_{\rm A}$, turbulence is basically hydrodynamic and Kolmogorov in nature. The momentum diffusion coefficient can thus be split up into two components: 
+i.e., the eddy turnover time at the outer scale. This is subject to uncertainties about the location of the outer scale $L$; estimates in the literature range from $L \sim 0.1-1$ Mpc. It is also worth remembering that MHD turbulence only applies below $l < l_{\rm A}$, where $l_{\rm A}$ is the Alfv{\'e}n scale where $\varv \sim \varv_{\rm A}$. Invoking fast modes, Kraichnan scalings, etc, is only valid below these scales. For $l > l_{\rm A}$, turbulence is basically hydrodynamic and Kolmogorov in nature. The momentum diffusion coefficient can thus be split up into two components: 
 \begin{equation}
 D_{\rm pp} = D_{\rm pp}^{\rm HD}[l_{\rm A} < l < L] + D_{\rm pp}^{\rm MHD}[l_{\rm c} < l < l_{\rm A}]
 \end{equation}
 From equations (\ref{eqn:diffusion}) and (\ref{eqn:k_W}), and assuming Kolmogorov turbulence from $l_{\rm A} < l < L$ and Kraichnan turbulence from $l_{\rm c} < l < l_{\rm A}$, we get: 
 \begin{equation}
-\frac{D_{\rm pp}^{\rm HD}}{D_{\rm pp}^{\rm MHD}} = \frac{k_{\rm L}^{2/3}k_{\rm A}^{1/3} v_{\rm c}^{2}}{k_{\rm A}^{1/2}k_{\rm c}^{1/2} v_{\rm A}^{2}} = A^{-1/2} \beta = 0.5 \left( \frac{\beta}{50} \right) 
+\frac{D_{\rm pp}^{\rm HD}}{D_{\rm pp}^{\rm MHD}} = \frac{k_{\rm L}^{2/3}k_{\rm A}^{1/3} \varv_{\rm c}^{2}}{k_{\rm A}^{1/2}k_{\rm c}^{1/2} \varv_{\rm A}^{2}} = A^{-1/2} \beta = 0.5 \left( \frac{\beta}{50} \right) 
 \end{equation}
-where we have used $k_{\rm A} = k_{\rm L} M_{A}^{3}$ (from Kolmogorov scalings, and $M_{\rm A} = v_{\rm c}/v_{\rm A}$ is the Alfv{\'e}n Mach number of the turbulence, $\beta \approx c_{\rm s}^{2}/v_{\rm A}^{2}$, and the cutoff scale $k_{\rm c}$ (equation \ref{eqn:k_c}).  Thus, the contribution of the two regimes are comparable (as we shall see later, this is not true if one incorrectly assumes Kraichnan scalings apply from the outer scale $L$; this boosts the contribution of the scales where $l_{\rm A} < l < L$ by a factor $M_{\rm A}^{1/2}$). 
-Henceforth, we can consider the outer scale of the fast modes to be $l_{\rm A}$, with velocity $v_{\rm A}$. The turbulent reacceleration time is: 
+where we have used $k_{\rm A} = k_{\rm L} M_{A}^{3}$ (from Kolmogorov scalings, and $M_{\rm A} = \varv_{\rm c}/\varv_{\rm A}$ is the Alfv{\'e}n Mach number of the turbulence, $\beta \approx c_{\rm s}^{2}/\varv_{\rm A}^{2}$, and the cutoff scale $k_{\rm c}$ (equation \ref{eqn:k_c}).  Thus, the contribution of the two regimes are comparable (as we shall see later, this is not true if one incorrectly assumes Kraichnan scalings apply from the outer scale $L$; this boosts the contribution of the scales where $l_{\rm A} < l < L$ by a factor $M_{\rm A}^{1/2}$). 
+Henceforth, we can consider the outer scale of the fast modes to be $l_{\rm A}$, with velocity $\varv_{\rm A}$. The turbulent reacceleration time is: 
 \begin{equation}
-\tau_{\rm D} = \frac{p^{2}}{4 D_{\rm pp}} = C_{\rm D} A^{1/2} c k_{\rm A} \frac{v_{A}^{2}}{c_{\rm S}^{2}}
+\tau_{\rm D} = \frac{p^{2}}{4 D_{\rm pp}} = C_{\rm D} A^{1/2} c k_{\rm A} \frac{\varv_{A}^{2}}{c_{\rm S}^{2}}
 \label{eqn:tau_D} 
 \end{equation}
 where $C_{\rm D} = 2/(5 \pi)$, $A\approx 11000$, and we have used equation \ref{eqn:k_c}. The turbulence decay time is given by the cascade time of fast modes (\citet{2004ApJ...614..757Y}; see equation \ref{eqn:cascade}): 
 \begin{equation}
-\tau_{\rm decay} = \frac{c_{\rm s}}{v_{\rm A}^{2} k_{\rm A}}\,.
+\tau_{\rm decay} = \frac{c_{\rm s}}{\varv_{\rm A}^{2} k_{\rm A}}\,.
 \label{eqn:tau_decay} 
 \end{equation} 
 This can be related to the eddy turnover time at the outer scale $\tau_{\rm edd}$ from $l_{\rm A} = L M_{\rm A}^{-3}$ to: 
 \begin{equation}
-\tau_{\rm decay} =\frac{L}{v_{\rm c}} \left(\frac{c_{\rm s}}{v_{\rm c}} \right)^{2} \frac{v_{\rm A}}{c_{\rm s}} = 0.7 \, \tau_{\rm edd} \left(\frac{\tilde{X}_{\rm tu}}{0.2}\right)^{-1}  \left(\frac{\beta}{100} \right)^{-1/2}
+\tau_{\rm decay} =\frac{L}{\varv_{\rm c}} \left(\frac{c_{\rm s}}{\varv_{\rm c}} \right)^{2} \frac{\varv_{\rm A}}{c_{\rm s}} = 0.7 \, \tau_{\rm edd} \left(\frac{\tilde{X}_{\rm tu}}{0.2}\right)^{-1}  \left(\frac{\beta}{100} \right)^{-1/2}
 \end{equation}
-where we have used $\tilde{X}_{\rm tu} \approx (v_{\rm c}/c_{\rm s})^{2}$ and $c_{\rm s}/v_{\rm A} = \beta^{1/2}$. Thus $\tau_{\rm decay} \sim \tau_{\rm edd}$, but we prefer to use the expression for $\tau_{\rm edd}$, since it is more physically correct and leads to more revealing scalings. 
+where we have used $\tilde{X}_{\rm tu} \approx (\varv_{\rm c}/c_{\rm s})^{2}$ and $c_{\rm s}/\varv_{\rm A} = \beta^{1/2}$. Thus $\tau_{\rm decay} \sim \tau_{\rm edd}$, but we prefer to use the expression for $\tau_{\rm edd}$, since it is more physically correct and leads to more revealing scalings. 
 
 From equations \ref{eqn:tau_D} and \ref{eqn:tau_decay}, we obtain:
 \begin{equation}
 \frac{\tau_{\rm cl}}{\tau_{\rm D}} \approx \frac{\tau_{\rm decay}}{\tau_{\rm D}} = 0.1 \left( \frac{c_{\rm s}}{1500 \, {\rm km \, s^{-1}}} \right) \left( \frac{\beta}{50} \right)^{-1}\,. 
 \label{eqn:ratios_TTD} 
 \end{equation}
-Remarkably, this expression is independent of properties of the turbulence such as $v_{\rm c},L$, or $l_{\rm A}$, and depends only on properties of the plasma ($c_{\rm s},\beta$). Ultimately, this arises because the timescale on which a fast mode wave transfers energy due to wave particle interactions in second order Fermi acceleration, $\tau_{\rm p} \sim (k_{\rm p} c (v_{\rm c}/c)^{2} )^{-1}$, is closely related to the timescale on which it cascades due to wave-wave interactions, $\tau_{\rm w} \sim c_{\rm s}/(k_{\rm w} v_{\rm c}^{2})$. This implies $\tau_{\rm w}/\tau_{\rm p} \sim (c_{s}/c)(l_{\rm w}/l_{\rm p})$, where $l_{\rm w} \sim l_{\rm A}$ is the outer scale on which the fast mode cascade begins, and $l_{\rm p} \sim (l_{\rm A} l_{\rm c})^{1/2}$ is the characteristic wavelength for wave-particle interactions. For transit time damping and an outer scale of $l_{\rm A}$, we have $l_{\rm c} \sim (m_{\rm e}/m_{\rm p}) l_{\rm A} (c_{\rm s}/v_{\rm A})^{4}$. We thus have $\tau_{\rm w}/\tau_{\rm p} \sim (c_{\rm s}/c)(l_{\rm A}/l_{\rm c})^{1/2} \sim (c_{\rm s}/c) (m_{\rm p}/m_{\rm e})^{1/2} \beta^{-1}$. More careful consideration of dimensionless factors boosts this estimate by an order of magnitude to give equation \ref{eqn:ratios_TTD}. 
+Remarkably, this expression is independent of properties of the turbulence such as $\varv_{\rm c},L$, or $l_{\rm A}$, and depends only on properties of the plasma ($c_{\rm s},\beta$). Ultimately, this arises because the timescale on which a fast mode wave transfers energy due to wave particle interactions in second order Fermi acceleration, $\tau_{\rm p} \sim (k_{\rm p} c (\varv_{\rm c}/c)^{2} )^{-1}$, is closely related to the timescale on which it cascades due to wave-wave interactions, $\tau_{\rm w} \sim c_{\rm s}/(k_{\rm w} \varv_{\rm c}^{2})$. This implies $\tau_{\rm w}/\tau_{\rm p} \sim (c_{s}/c)(l_{\rm w}/l_{\rm p})$, where $l_{\rm w} \sim l_{\rm A}$ is the outer scale on which the fast mode cascade begins, and $l_{\rm p} \sim (l_{\rm A} l_{\rm c})^{1/2}$ is the characteristic wavelength for wave-particle interactions. For transit time damping and an outer scale of $l_{\rm A}$, we have $l_{\rm c} \sim (m_{\rm e}/m_{\rm p}) l_{\rm A} (c_{\rm s}/\varv_{\rm A})^{4}$. We thus have $\tau_{\rm w}/\tau_{\rm p} \sim (c_{\rm s}/c)(l_{\rm A}/l_{\rm c})^{1/2} \sim (c_{\rm s}/c) (m_{\rm p}/m_{\rm e})^{1/2} \beta^{-1}$. More careful consideration of dimensionless factors boosts this estimate by an order of magnitude to give equation \ref{eqn:ratios_TTD}. 
 
-On the other hand, equation \ref{eqn:ratios_TTD} points toward a pessimistic scenario where turbulent reacceleration with TTD on thermal particles is never effective. A key reason is that we assume Kraichnan turbulence only applies for $l< l_{\rm A}$. There is then insufficient separation of scales: the cutoff scale $l_{\rm c} \sim 0.2 \beta_{\rm 50}^{2} l_{\rm A}$. Although there is a fair large separation of scales between the outer driving scale $L$ and $l_{\rm A} = L M_{\rm A}^{-3}$ (a factor of $30-1000$ for $M_{\rm A} \approx 3-10$; we have $M_{\rm A} \sim (\tilde{X}_{\rm tu} \beta)^{1/2} \sim 3.2$ for our fiducial assumptions), Kolmogorov turbulence, with its steeper spectrum, has more energy at large scales ($k W(k) \propto k^{-2/3}, k^{-1/2}$ for Kolmogorov and Kraichnan turbulence respectively). This implies that the energy-weighted scales at which wave-particle interaction take place are larger in Kolmogorov turbulence, and thus that the wave-particle interaction rate is lower. If (as is frequently seen) we instead assume that Kraichnan turbulence begins at the outer scale $L$, with characteristic decay time $L c_{\rm s}/v_{\rm c}^{2}$, then we obtain a more platable result: 
+On the other hand, equation \ref{eqn:ratios_TTD} points toward a pessimistic scenario where turbulent reacceleration with TTD on thermal particles is never effective. A key reason is that we assume Kraichnan turbulence only applies for $l< l_{\rm A}$. There is then insufficient separation of scales: the cutoff scale $l_{\rm c} \sim 0.2 \beta_{\rm 50}^{2} l_{\rm A}$. Although there is a fair large separation of scales between the outer driving scale $L$ and $l_{\rm A} = L M_{\rm A}^{-3}$ (a factor of $30-1000$ for $M_{\rm A} \approx 3-10$; we have $M_{\rm A} \sim (\tilde{X}_{\rm tu} \beta)^{1/2} \sim 3.2$ for our fiducial assumptions), Kolmogorov turbulence, with its steeper spectrum, has more energy at large scales ($k W(k) \propto k^{-2/3}, k^{-1/2}$ for Kolmogorov and Kraichnan turbulence respectively). This implies that the energy-weighted scales at which wave-particle interaction take place are larger in Kolmogorov turbulence, and thus that the wave-particle interaction rate is lower. If (as is frequently seen) we instead assume that Kraichnan turbulence begins at the outer scale $L$, with characteristic decay time $L c_{\rm s}/\varv_{\rm c}^{2}$, then we obtain a more platable result: 
 \begin{equation}
 \frac{\tau_{\rm cl}}{\tau_{\rm D}} \approx 0.8  \left( \frac{c_{\rm s}}{1500 \, {\rm km \, s^{-1}}} \right) \left( \frac{\tilde{X}_{\rm tu}}{0.2} \right). 
 \end{equation}
@@ -1125,13 +1125,13 @@ This arises because the decay time is now $\sim M_{\rm A}$ times longer, and the
 
 One alternative is that scattering in the high $\beta$ ICM is mediated by plasma instabilities (firehose, mirror) rather than Coulomb scattering. This vastly increases the scattering rate and reduces the mean free path of thermal particles. In this case, the fast modes damp by TTD on relativistic rather than thermal particles. The momentum diffusion coefficient in this case is then \citep{brunetti11, miniati15}:
 \begin{equation}
-D_{\rm pp}^{\rm CR} = \frac{2 p^{2} \zeta}{x_{\rm CR}} k_{\rm L} \frac{\langle v_{\rm c}^{2} \rangle^{2}}{c_{\rm s}^{3}}
+D_{\rm pp}^{\rm CR} = \frac{2 p^{2} \zeta}{x_{\rm CR}} k_{\rm L} \frac{\langle \varv_{\rm c}^{2} \rangle^{2}}{c_{\rm s}^{3}}
 \end{equation}
-where $\zeta$ is an efficiency factor for the the effectiveness of plasma instabilities (e.g., due to spatial or temporal intermittency), and $x_{\rm CR}=\eps_{\rm CR}/\eps_{\rm th}$ is the relative energy density of cosmic rays. If we set $k_{\rm L} \rightarrow k_{\rm A}$, $v_{c}^{2} \rightarrow v_{\rm A}^{2}$, as before, then: 
+where $\zeta$ is an efficiency factor for the the effectiveness of plasma instabilities (e.g., due to spatial or temporal intermittency), and $x_{\rm CR}=\eps_{\rm CR}/\eps_{\rm th}$ is the relative energy density of cosmic rays. If we set $k_{\rm L} \rightarrow k_{\rm A}$, $\varv_{c}^{2} \rightarrow \varv_{\rm A}^{2}$, as before, then: 
 \begin{equation}
 \frac{\tau_{\rm cl}}{\tau_{\rm D}} \approx 8 \frac{\zeta}{\beta x_{\rm CR}}
 \end{equation}
-In principle, this implies exponential sensitivity to $x_{\rm CR}$, a similar situation as exponential sensitivity to $X_{\rm tu}$. However, there is a self-limiting asymptotic behaviour: as $x_{\rm CR}$ increases due to turbulent reacceleration, damping increases, which limits the further growth of the cosmic ray energy density \citep{brunetti11}. One natural assumption is to assume that $\eps_{\rm CR}$ saturates at a level $\eps_{\rm CR} \sim \eps_{\rm turb} (MHD) \sim \eps_{\rm B}$, in which case $x_{\rm CR} \sim \beta^{-1}$, so that: 
+In principle, this implies exponential sensitivity to $x_{\rm CR}$, a similar situation as exponential sensitivity to $X_{\rm tu}$. However, there is a self-limiting asymptotic behaviour: as $x_{\rm CR}$ increases due to turbulent reacceleration, damping increases, which limits the further growth of the cosmic ray energy density \citep{brunetti11}. One natural assumption is to assume that $\eps_{\rm CR}$ saturates at a level $\eps_{\rm CR} \sim \eps_{\rm turb} ({\rm MHD}) \sim \eps_{\rm B}$, in which case $x_{\rm CR} \sim \beta^{-1}$, so that: 
 \begin{equation}
 \frac{\tau_{\rm cl}}{\tau_{\rm D}} \approx 1.6 \left(\frac{\zeta}{0.2}\right)\,.
 \label{eqn:ratios_CR_damp} 
@@ -1146,7 +1146,7 @@ where we have set $\langle k \rangle_{\rm W} \approx k_{\rm L}$ for Burgers' tur
 
 It is interesting to reconsider surface brightness and spectral profiles if indeed $\tau_{\rm D} \sim \tau_{\rm cl}$, for the reasons mentioned above (e.g., equation \ref{eqn:ratios_CR_damp}). We show the results of adopting such an ansatz in Fig. \ref{fig:param_comp_tcl_tD}, where, similar to Fig. \ref{fig:param_comp}, we vary $X_{\rm tu}, \alpha_{\rm tu}, \alpha_{\rm CR, spat}$ about fuducial values, but this time we do not adopt a fixed $\tau_{\rm cl}$ but set $\tau_{\rm cl}=\tau_{\rm D}$.  They are remarkably revealing. In this case, one is much less sensitive to the properties of the turbulence, and more sensitive to the details of the CR seed population. This gives hope to the possibility that one could effectively marginalize over the very uncertain properties of turbulence (which are unlikely to be more precisely constrained observationally in the near future) to learn something about the underlying CR population. 
 
-For instance, in the top panels of Fig \ref{fig:param_comp_tcl_tD}, we see that once turbulence exceeds a threshold value $X_{\rm tu} \sim 0.1$, then its overall exact energy density does not matter-- profiles simply converge to an asymptotic form as $X_{\rm tu}$ is increased. This is in contrast to the exponential sensitivity, flattening in surface brightness, and increasing spectral curvature as $X_{\rm tu}$ is increased that we saw previously. A threshold value of $X_{\rm tu}$ is necessary for turbulent reacceleration to overcome cooling. Once that condition is satisfied, the condition $\tau_{\rm cl} \sim tau_{\rm D}$ implies a fixed amount of amplification: stronger turbulence implies faster acceleration, but also dissipates more quickly. This leads to the asymptotic behavior seen. From the middle panels, we see another striking result: in contrast to Fig. \ref{fig:param_comp}, results are also completely insensitive to the turbulent profile. Given the large uncertainties in the latter, this is welcome news. It arises because for our fuducial value ($X_{\rm tu} = 0.2$), variations in the turbulent profile still lead to local energy densities which are above the threshold value required to overcome cooling, and turbulent amplification approaches its asymptotic value. Finally, in the bottom panels, we see that we {\it are} sensitive to the spatial CRs; it affects both the surface brightness profile (a flatter CR distribution implies flatter surface brightness profiles) and luminosity (once again, luminosity is larger for more centrally concentrated CRs, since more secondaries are produced). This arises because once turbulent reacceleration overcomes cooling, the condition $\tau_{\rm cl} \sim \tau_{\rm D}$ provides for a fixed amount of amplification in each radial shell. The radio luminosity in each shell then depends linearly on initial conditions, i.e., the profile of CR seeds. Interestingly, the best-fitting profile for Coma comes from a flat CR distribution -- i.e., one that is the outcome of efficient CR streaming. Matching the overall amplitude simply involves a rescaling of $\tau_{\rm c}/\tau_{\rm D}$ (equation \ref{eqn:ratios_CR_damp}) or the CR content.  
+For instance, in the top panels of Fig \ref{fig:param_comp_tcl_tD}, we see that once turbulence exceeds a threshold value $X_{\rm tu} \sim 0.1$, then its overall exact energy density does not matter-- profiles simply converge to an asymptotic form as $X_{\rm tu}$ is increased. This is in contrast to the exponential sensitivity, flattening in surface brightness, and increasing spectral curvature as $X_{\rm tu}$ is increased that we saw previously. A threshold value of $X_{\rm tu}$ is necessary for turbulent reacceleration to overcome cooling. Once that condition is satisfied, the condition $\tau_{\rm cl} \sim \tau_{\rm D}$ implies a fixed amount of amplification: stronger turbulence implies faster acceleration, but also dissipates more quickly. This leads to the asymptotic behavior seen. From the middle panels, we see another striking result: in contrast to Fig. \ref{fig:param_comp}, results are also completely insensitive to the turbulent profile. Given the large uncertainties in the latter, this is welcome news. It arises because for our fuducial value ($X_{\rm tu} = 0.2$), variations in the turbulent profile still lead to local energy densities which are above the threshold value required to overcome cooling, and turbulent amplification approaches its asymptotic value. Finally, in the bottom panels, we see that we {\it are} sensitive to the spatial CRs; it affects both the surface brightness profile (a flatter CR distribution implies flatter surface brightness profiles) and luminosity (once again, luminosity is larger for more centrally concentrated CRs, since more secondaries are produced). This arises because once turbulent reacceleration overcomes cooling, the condition $\tau_{\rm cl} \sim \tau_{\rm D}$ provides for a fixed amount of amplification in each radial shell. The radio luminosity in each shell then depends linearly on initial conditions, i.e., the profile of CR seeds. Interestingly, the best-fitting profile for Coma comes from a flat CR distribution -- i.e., one that is the outcome of efficient CR streaming. Matching the overall amplitude simply involves a rescaling of $\tau_{\rm c}/\tau_{\rm D}$ (equation \ref{eqn:ratios_CR_damp}) or the CR content.  
 
 Obviously, the ideas in this section require further study. However, the notion that $\tau_{\rm cl}/\tau_{\rm D}$ could self-regulate around a fixed value is exciting, because it eliminates the main source of uncertainty-- the poorly unconstrained properties of turbulence, and implies that radio halos could potentially provide more robust constraints on the underlying CR population.  
 
