notation unified throughout the paper, text edited

--- a/paper.bib
+++ b/paper.bib
@@ -9,6 +9,102 @@
 
 
 
+@ARTICLE{Brunetti2009,
+   author = {{Brunetti}, G. and {Cassano}, R. and {Dolag}, K. and {Setti}, G.
+	},
+    title = "{On the evolution of giant radio halos and their connection with cluster mergers}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {0909.2343},
+ keywords = {radio continuum: general, X-rays: general, radiation mechanisms: non-thermal, acceleration of particles, galaxies: clusters: general},
+     year = 2009,
+    month = nov,
+   volume = 507,
+    pages = {661-669},
+      doi = {10.1051/0004-6361/200912751},
+   adsurl = {http://adsabs.harvard.edu/abs/2009A%26A...507..661B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Park2015,
+   author = {{Park}, J. and {Caprioli}, D. and {Spitkovsky}, A.},
+    title = "{Simultaneous Acceleration of Protons and Electrons at Nonrelativistic Quasiparallel Collisionless Shocks}",
+  journal = {Physical Review Letters},
+archivePrefix = "arXiv",
+   eprint = {1412.0672},
+ primaryClass = "astro-ph.HE",
+ keywords = {Shock waves and discontinuities, Microinstabilities, Particle-in-cell method, Cosmic rays},
+     year = 2015,
+    month = feb,
+   volume = 114,
+   number = 8,
+      eid = {085003},
+    pages = {085003},
+      doi = {10.1103/PhysRevLett.114.085003},
+   adsurl = {http://adsabs.harvard.edu/abs/2015PhRvL.114h5003P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Ahnen2016,
+   author = {{Ahnen}, M.~L. and {Ansoldi}, S. and {Antonelli}, L.~A. and 
+	{Antoranz}, P. and {Babic}, A. and {Banerjee}, B. and {Bangale}, P. and 
+	{Barres de Almeida}, U. and {Barrio}, J.~A. and {Becerra Gonz{\'a}lez}, J. and 
+	{Bednarek}, W. and {Bernardini}, E. and {Biasuzzi}, B. and {Biland}, A. and 
+	{Blanch}, O. and {Bonnefoy}, S. and {Bonnoli}, G. and {Borracci}, F. and 
+	{Bretz}, T. and {Buson}, S. and {Carmona}, E. and {Carosi}, A. and 
+	{Chatterjee}, A. and {Clavero}, R. and {Colin}, P. and {Colombo}, E. and 
+	{Contreras}, J.~L. and {Cortina}, J. and {Covino}, S. and {Da Vela}, P. and 
+	{Dazzi}, F. and {De Angelis}, A. and {De Lotto}, B. and {de O{\~n}a Wilhelmi}, E. and 
+	{Delgado Mendez}, C. and {Di Pierro}, F. and {Dom{\'{\i}}nguez}, A. and 
+	{Dominis Prester}, D. and {Dorner}, D. and {Doro}, M. and {Einecke}, S. and 
+	{Eisenacher Glawion}, D. and {Elsaesser}, D. and {Fern{\'a}ndez-Barral}, A. and 
+	{Fidalgo}, D. and {Fonseca}, M.~V. and {Font}, L. and {Frantzen}, K. and 
+	{Fruck}, C. and {Galindo}, D. and {Garc{\'{\i}}a L{\'o}pez}, R.~J. and 
+	{Garczarczyk}, M. and {Garrido Terrats}, D. and {Gaug}, M. and 
+	{Giammaria}, P. and {Godinovi{\'c}}, N. and {Gonz{\'a}lez Mu{\~n}oz}, A. and 
+	{Gora}, D. and {Guberman}, D. and {Hadasch}, D. and {Hahn}, A. and 
+	{Hanabata}, Y. and {Hayashida}, M. and {Herrera}, J. and {Hose}, J. and 
+	{Hrupec}, D. and {Hughes}, G. and {Idec}, W. and {Kodani}, K. and 
+	{Konno}, Y. and {Kubo}, H. and {Kushida}, J. and {La Barbera}, A. and 
+	{Lelas}, D. and {Lindfors}, E. and {Lombardi}, S. and {Longo}, F. and 
+	{L{\'o}pez}, M. and {L{\'o}pez-Coto}, R. and {Lorenz}, E. and 
+	{Majumdar}, P. and {Makariev}, M. and {Mallot}, K. and {Maneva}, G. and 
+	{Manganaro}, M. and {Mannheim}, K. and {Maraschi}, L. and {Marcote}, B. and 
+	{Mariotti}, M. and {Mart{\'{\i}}nez}, M. and {Mazin}, D. and 
+	{Menzel}, U. and {Miranda}, J.~M. and {Mirzoyan}, R. and {Moralejo}, A. and 
+	{Moretti}, E. and {Nakajima}, D. and {Neustroev}, V. and {Niedzwiecki}, A. and 
+	{Nievas Rosillo}, M. and {Nilsson}, K. and {Nishijima}, K. and 
+	{Noda}, K. and {Orito}, R. and {Overkemping}, A. and {Paiano}, S. and 
+	{Palacio}, J. and {Palatiello}, M. and {Paneque}, D. and {Paoletti}, R. and 
+	{Paredes}, J.~M. and {Paredes-Fortuny}, X. and {Pedaletti}, G. and 
+	{Persic}, M. and {Poutanen}, J. and {Prada Moroni}, P.~G. and 
+	{Prandini}, E. and {Puljak}, I. and {Rhode}, W. and {Rib{\'o}}, M. and 
+	{Rico}, J. and {Rodriguez Garcia}, J. and {Saito}, T. and {Satalecka}, K. and 
+	{Schultz}, C. and {Schweizer}, T. and {Sillanp{\"a}{\"a}}, A. and 
+	{Sitarek}, J. and {Snidaric}, I. and {Sobczynska}, D. and {Stamerra}, A. and 
+	{Steinbring}, T. and {Strzys}, M. and {Takalo}, L. and {Takami}, H. and 
+	{Tavecchio}, F. and {Temnikov}, P. and {Terzi{\'c}}, T. and 
+	{Tescaro}, D. and {Teshima}, M. and {Thaele}, J. and {Torres}, D.~F. and 
+	{Toyama}, T. and {Treves}, A. and {Vazquez Acosta}, M. and {Verguilov}, V. and 
+	{Vovk}, I. and {Ward}, J.~E. and {Will}, M. and {Wu}, M.~H. and 
+	{Zanin}, R. and {Pfrommer}, C. and {Pinzke}, A. and {Zandanel}, F.
+	},
+    title = "{Deep observation of the NGC 1275 region with MAGIC: search of diffuse {$\gamma$}-ray emission from cosmic rays in the Perseus cluster}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1602.03099},
+ primaryClass = "astro-ph.HE",
+ keywords = {gamma rays: galaxies: clusters, acceleration of particles, galaxies: clusters: individual: Perseus, galaxies: individual: NGC 1275, galaxies: individual: NGC 1265},
+     year = 2016,
+    month = apr,
+   volume = 589,
+      eid = {A33},
+    pages = {A33},
+      doi = {10.1051/0004-6361/201527846},
+   adsurl = {http://adsabs.harvard.edu/abs/2016A%26A...589A..33A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @article{brunetti16_review,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/2016PPCF...58a4011B},
